<resources>
    <string name="app_name">Calorie Analysis</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="about_app_department">Department: CSE, SUST</string>
    <string name="about_app_course">Course: CSE 250 project, 2018-19</string>
    <string name="about_app_course_teacher">Course Teacher: Enamul Hassan</string>
    <string name="about_app_group">Group: 26 \n\n
    Member 1:\n\n
        Name: Ashikur Rahman\n
        Registration: 2017331100\n\n\n
    Member 2:\n\n
        Name: Md. Shakil\n
        Registration: 2017331090
    </string>

    <string name="about_app_general_text">This Android application has been developed by group 26 for "CSE 250, 2018-19" course project.</string>


    <string name="average_calorie_text">Average person needs 2000 Calories per day to maintain weight.
    </string>
    <string name="default_web_client_ids">1</string>
</resources>